# marketing-mix-allocation

./: .dockerignore  .gitignore  AI_ANALYST.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  run_app.bat  run_app.command
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
.streamlit/: config.toml
docs/: data_guide.md  decision_guide.md  methods.md
examples/: channel_plan_template.csv  demo_channel_plan.csv  demo_digital_economics.csv  demo_marketing_panel.csv  panel_template.csv
scripts/: generate_examples.py
src/allocsignal/: __init__.py  allocation.py  digital.py  errors.py  io.py  panel.py  response.py  schedule.py  validation.py
tests/: test_allocation.py  test_app_evidence_pack.py  test_app_pages.py  test_digital.py  test_io_and_validation.py  test_panel.py  test_response.py  test_schedule.py
