[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allocsignal"
version = "1.0.0"
description = "AllocSignal: open, local-first marketing response and resource allocation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Ulrik Erlingsen" }]
keywords = [
  "marketing mix",
  "resource allocation",
  "response curves",
  "panel regression",
  "marketing analytics",
  "streamlit",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business",
]
dependencies = [
  "numpy>=1.24,<3",
  "openpyxl>=3.1,<4",
  "pandas>=2.0,<3",
  "plotly>=5.18,<7",
  "scipy>=1.10,<2",
  "statsmodels>=0.14,<1",
  "streamlit>=1.38,<2",
  "xlrd>=2.0,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<10",
  "ruff>=0.8,<1",
]

[project.urls]
Homepage = "https://github.com/UlrikErlingsen/marketing-mix-allocation"
Source = "https://github.com/UlrikErlingsen/marketing-mix-allocation"
Issues = "https://github.com/UlrikErlingsen/marketing-mix-allocation/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["E402"]
